--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,6 +22,18 @@ footer h3 {
     font-family: manropeRegular;
 }
 
+#sobre {
+    scroll-behavior: smooth;
+}
+
+#patrocinio {
+    scroll-behavior: smooth;
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
 .uk-navbar-container {
     background-color: #FFDA1F;
 }
