--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,16 +1,22 @@
-/*
-    laranja: #FF5C27
-    bege: #F5F3E7
-    azul: #3F9BFF
-    verde: #2A9507
-    amarelo: #FFDA1F
-    verde escuro: #383806
-    vermelho: #FD4000
-    branco: #FFFFFFF
-*/
+:root { 
+    --laranja: #FF5C27;
+    --bege: #F5F3E7;
+    --azul: #3F9BFF;
+    --verde: #2A9507;
+    --amarelo: #FFDA1F;
+    --verde_escuro: #383806;
+    --vermelho: #FD4000;
+    --branco_default: #FFF;
+    --preto_default: #000;
+}
+
 body {
     font-family: manropeRegular;
     font-size: 1.4em;
+}
+
+body h2 {
+    font-family: bonoc !important;
 }
 
 footer {
@@ -35,7 +41,7 @@ html {
 }
 
 .uk-navbar-container {
-    background-color: #FFDA1F;
+    background-color: var(--amarelo);
 }
 
 .uk-navbar-item {
@@ -43,16 +49,16 @@ html {
 }
 
 .uk-footer {
-    background-color: #3F9BFF;
-    color: #FFFFFF;
+    background-color: var(--azul);
+    color: var(--branco_default);
 }
 
 .uk-footer h3 {
-    color: #FFFFFF;
+    color: var(--branco_default);
 }
 
 .uk-footer a {
-    color: #FFFFFF;
+    color: var(--branco_default);
 }
 
 .uk-navbar-container {
@@ -109,7 +115,7 @@ html {
 }
 
 .uk-text-bold {
-    color: black;
+    color: var(--preto_default);
 }
 
 .uk-button {
@@ -119,21 +125,21 @@ html {
 }
 
 .uk-button:hover {
-    border-left: 0.25rem solid black;
-    border-bottom: 0.25rem solid black;
+    border-left: 0.25rem solid var(--preto_default);
+    border-bottom: 0.25rem solid var(--preto_default);
 }
 
 .uk-button-primary {
-    background-color: #3F9BFF;
-    color: white;
-    border-left: 0.25rem solid black;
-    border-bottom: 0.25rem solid black;
+    background-color: var(--azul);
+    color: var(--branco_default);
+    border-left: 0.25rem solid var(--preto_default);
+    border-bottom: 0.25rem solid var(--preto_default);
 }
 
 .uk-button-default {
-    background-color: #F5F3E7;
-    border-left: 0.25rem solid black;
-    border-bottom: 0.25rem solid black;
+    background-color: var(--bege);
+    border-left: 0.25rem solid var(--preto_default);
+    border-bottom: 0.25rem solid var(--preto_default);
 }
 
 @media screen and (max-width: 1366px) {
