fix formt of code

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -324,3 +324,9 @@ span {
     text-overflow: ellipsis;
     max-width: 200px; /* Ajuste este valor para o tamanho desejado */
 }
+
+.avatar-medium {
+    object-fit: cover;
+    height: 100px;
+    width: 100px;
+}
