Adiciona modal na página inicial para reforçar os locais do evento e o código de conduta

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -314,9 +314,14 @@ span {
     justify-content: space-between;
 }
 
-/* .uk-text-small {
-    min-height: 220px;
-} */
+figcaption {
+    font-size: 0.75em;
+}
+
+.uk-icon {
+    color: black !important;
+    cursor: pointer;
+}
 
 .custom-class {
     margin-top: 10px;
